--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
         </div>
         <div id="hist">
         </div>
+        <button id="update">
+            Update Plots
+        </button>
     </div>
     <div id="plots">
         <!--Hier spaeter Parallel, Scatter Plot und Tabelle-->
@@ -29,6 +32,6 @@
     var dataset = {{ data | safe }};
     slider = slider("slider");
     slider.init();
-    //andere Plots bei slider.js in Funktion "callOtherPlots" aufrufen
+    //andere Plots bei slider.js beim Button aufrufen
 </script>
 </body>
