--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <script src="/static/js/hist.js"></script>
     <script src="/static/js/extractSubset.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/static/js/ParallelCoordinates.js"></script>
+
 </head>
 
 
@@ -23,6 +25,7 @@
         <button id="update">
             Update Plots
         </button>
+        <div id="parCoordsDiv"></div>
     </div>
     <div id="plots">
         <!--Hier spaeter Parallel, Scatter Plot und Tabelle-->
