--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='own.css') }}">
     <script src="/static/js/slider.js"></script>
     <script src="/static/js/hist.js"></script>
+    <script src="/static/js/table.js"></script>
     <script src="/static/js/extractSubset.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/ParallelCoordinates.js"></script>
