--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,13 @@
     <title>Uncertainty in Proteins</title>
     <meta charset="iso-8859-1">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='own.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='table_style.css') }}">
     <script src="/static/js/slider.js"></script>
     <script src="/static/js/hist.js"></script>
     <script src="/static/js/scatter.js"></script>
     <script src="/static/js/table.js"></script>
+	<script type="text/javascript" src="/static/js/jquery-latest.js"></script> 
+	<script type="text/javascript" src="/static/js/jquery.tablesorter.js"></script> 
     <script src="/static/js/extractSubset.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/ParallelCoordinates.js"></script>
