- css structure - splom axes fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 
     <title>Uncertainty in Proteins</title>
     <meta charset="iso-8859-1">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/own.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/table_style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/layout.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/plots_style.css') }}">
     <script src="/static/js/slider.js"></script>
     <script src="/static/js/hist.js"></script>
     <script src="/static/js/scatter.js"></script>
